[#yazi] update yazi configs

--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -8,13 +8,13 @@ prepend_keymap = [
   { on = ["p"], run = "plugin smart-paste", desc = "Paste into the hovered directory or CWD" },
   # { on = [ "H" ], run = "plugin hide-preview", desc = "Hide preview pane" },
   { on = ["T"], run = "plugin max-preview", desc = "Maximize or restore preview pane" },
-  { on = ["z"], run = "plugin zoxide", desc = "Jump to a directory using zoxide" },
-	{ on = ["<C-f>"], run = "plugin fzf", desc = "Jump to a directory, or reveal a file using fzf" },
   { on = ["f"], run = "plugin jump-to-char", desc = "Jump to char" },
-  { on = ["c", "a",], run = "plugin compress", desc = "Archive selected files" },
-  { on = [ "f" ], run = "plugin jump-to-char", desc = "Jump to char" },
   { on = [ "b", "a" ], run = "plugin mactag --args='add'", desc = "Tag selected files" },
   { on = [ "b", "r" ], run = "plugin mactag --args='remove'", desc = "Untag selected files" },
+  { on = [";", "l"], run = "plugin lazygit", desc = "Run Lazygit" },
+  { on = [";", "c"], run = "plugin compress", desc = "Archive selected files" },
+  { on = [";", "z"], run = "plugin zoxide", desc = "Jump with zoxide" },
+	{ on = [";", "f"], run = "plugin fzf", desc = "Jump with fzf" },
 ]
 
 keymap = [
@@ -51,21 +51,21 @@ keymap = [
 
   # Find
 	{ on = "/", run = "find --smart", desc = "Find next file" },
-	{ on = ";", run = "find --previous --smart", desc = "Find previous file" },
+	{ on = ",", run = "find --previous --smart", desc = "Find previous file" },
 	{ on = "n", run = "find_arrow", desc = "Go to the next found" },
 	{ on = "N", run = "find_arrow --previous", desc = "Go to the previous found" },
 
   # Filter
-  { on = [ "F" ], run = "filter --smart", desc = "Filter the files" },
+  { on = ["F"], run = "filter --smart", desc = "Filter the files" },
 
   # Help
-  { on = [ "?" ], run = "help", desc = "Open help" },
+  { on = ["?"], run = "help", desc = "Open help" },
 
   # Shell
-  { on = [ "<C-s>" ], run = 'shell "$SHELL" --block --confirm', desc = "Open shell here" },
+  { on = ["<C-s>"], run = 'shell "$SHELL" --block --confirm', desc = "Open shell here" },
 
   # Tasks
-	{ on = [ "W" ], run = "tasks_show", desc = "Show task manager" },
+	{ on = [";", "w"], run = "tasks_show", desc = "Show task manager" },
   
   # Operation: D
 	{ on = ["d", "c"], run = "remove", desc = "Trash selected files" },
