--- a/yazi/keymap.toml
+++ b/yazi/keymap.toml
@@ -5,7 +5,7 @@ prepend_keymap = [
   # Plugins
   { on = ["l"], run = "plugin smart-enter", desc = "Enter the child directory, or open the file" },
   { on = "<Enter>", run = 'plugin smart-enter' },
-  { on = ["p"], run = "plugin smart-paste", desc = "Paste into the hovered directory or CWD" },
+  { on = ["p", "m"], run = "plugin smart-paste", desc = "Paste into the hovered directory or CWD" },
   # { on = [ "H" ], run = "plugin hide-preview", desc = "Hide preview pane" },
   { on = ["T"], run = "plugin max-preview", desc = "Maximize or restore preview pane" },
   { on = ["f"], run = "plugin jump-to-char", desc = "Jump to char" },
@@ -35,13 +35,15 @@ keymap = [
 	{ on = "G", run = "arrow 99999999", desc = "Move cursor to the bottom" },
   { on = "q", run = "close", desc = "Close the current tab, or quit if it is last tab" },
   { on = "<Esc>", run = "escape", desc = "Exit visual mode, clear selected, or cancel search" },
+  { on = ".", run = "hidden toggle", desc = "Toggle the visibility of hidden files" },
 
   # Create
   { on = "a", run = "create", desc = "Create a file (ends with / for directories)" },
 	{ on = "A", run = "create --dir", desc = "Create a directory" },
 
   # Selection
-	{ on = "<Space>", run = ["toggle", "arrow 1"], desc = "Toggle the current selection state" },
+	# { on = "<Space>", run = ["toggle", "arrow 1"], desc = "Toggle the current selection state" },
+	{ on = "<Space>", run = "toggle", desc = "Toggle the current selection state" },
 	{ on = "v", run = "toggle_all", desc = "Enter visual mode (selection mode)" },
 	{ on = "V", run = "visual_mode --unset", desc = "Enter visual mode (unset mode)" },
 
@@ -71,9 +73,9 @@ keymap = [
 	{ on = [";", "o"], run = "open --interactive", desc = "Open selected files interactively" },
   
   # Operation: D
-	{ on = ["d", "c"], run = "remove", desc = "Trash selected files" },
-	{ on = ["d", "d"], run = "remove --permanently", desc = "Permanently delete selected files" },
-	{ on = ["d", "y"], run = "yank --cut", desc = "Yank selected files (cut)" },
+	{ on = ["d"], run = "remove", desc = "Trash selected files" },
+	{ on = ["D"], run = "remove --permanently", desc = "Permanently delete selected files" },
+	{ on = ["x"], run = "yank --cut", desc = "Yank selected files (cut)" },
 
   # Operation: Y
 	{ on = ["y", "y"], run = "yank", desc = "Yank selected files (copy)" },
@@ -129,8 +131,56 @@ keymap = [
 ]
 
 [input]
-prepend_keymap = [
-  { on = [ "<Esc>" ], run = "close", esc = "Cancel input" }
+keymap = [
+	{ on = "<C-c>", run = "close", desc = "Cancel input" },
+	{ on = "q", run = "close", desc = "Cancel input" },
+	{ on = "<Enter>", run = "close --submit", desc = "Submit the input" },
+	{ on = "<Esc>", run = "escape", desc = "Go back the normal mode, or cancel input" },
+
+	# Mode
+	{ on = "i", run = "insert", desc = "Enter insert mode" },
+	{ on = "a", run = "insert --append", desc = "Enter append mode" },
+	{ on = "v", run = "visual", desc = "Enter visual mode" },
+	{ on = "<F1>", run = "help", desc = "Open help" },
+	{ on = "c", run = "delete --cut --insert", desc = "Cut the selected characters, and enter insert mode" },
+	{ on = "C", run = ["delete --cut --insert", "move 999"], desc = "Cut until the EOL, and enter insert mode" },
+	{ on = "x", run = ["delete --cut", "move 1 --in-operating"], desc = "Cut the current character" },
+	{ on = "y", run = "yank", desc = "Copy the selected characters" },
+	{ on = "p", run = "paste", desc = "Paste the copied characters after the cursor" },
+	{ on = "P", run = "paste --before", desc = "Paste the copied characters before the cursor" },
+
+	# Undo/Redo
+	{ on = "u", run = "undo", desc = "Undo the last operation" },
+	{ on = "<C-r>", run = "redo", desc = "Redo the last operation" },
+
+	# Help
+	{ on = "~", run = "help", desc = "Open help" },
+
+	# Cut/Yank/Paste
+	{ on = "d", run = "delete --cut", desc = "Cut the selected characters" },
+	{ on = "D", run = ["delete --cut", "move 999"], desc = "Cut until the Ee current or next word" },
+
+	# Line-wise movement
+	{ on = "<S-h>", run = "move -999", desc = "Move to the BOL" },
+	{ on = "<S-l>", run = "move 999", desc = "Move to the EOL" },
+	{ on = "<S-k>", run = "move -999", desc = "Move to the BOL" },
+	{ on = "<S-j>", run = "move 999", desc = "Move to the EOL" },
+	{ on = "<Home>", run = "move -999", desc = "Move to the BOL" },
+	{ on = "<End>", run = "move 999", desc = "Move to the EOL" },
+
+  # Delete
+	{ on = "<Backspace>", run = "backspace", desc = "Delete the character before the cursor" },
+	{ on = "<Delete>", run = "backspace --under", desc = "Delete the character under the cursor" },
+
+	# Character-wise movement
+	{ on = "h", run = "move -1", desc = "Move back a character" },
+	{ on = "l", run = "move 1", desc = "Move forward a character" },
+	{ on = "<Left>", run = "move -1", desc = "Move back a character" },
+	{ on = "<Right>", run = "move 1", desc = "Move forward a character" },
+
+	# Word-wise movement
+	{ on = "b", run = "backward", desc = "Move back to the start of the current or previous word" },
+	{ on = "w", run = "forward", desc = "Move forward to the start of the next word" }
 ]
 
 [completion]
