--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -1,84 +1,132 @@
 "$schema" = "https://yazi-rs.github.io/schemas/yazi.json"
 
 [manager]
-ratio          = [ 1, 4, 3 ]
-sort_by        = "natural"
+ratio = [1, 4, 3]
+sort_by = "natural"
 sort_sensitive = true
-sort_reverse   = false
+sort_reverse = false
 sort_dir_first = true
-linemode       = "size"
-show_hidden    = false
-show_symlink   = true
+linemode = "size"
+show_hidden = false
+show_symlink = true
 
 [preview]
-tab_size   = 2
-max_width  = 1200
+tab_size = 2
+max_width = 1200
 max_height = 1000
 
 [opener]
 edit = [
-	{ run = '${EDITOR:=nvim} "$@"', desc = "$EDITOR", block = true },
-	{ run = 'code "$@"', orphan = true },
+  { run = '${EDITOR:=nvim} "$@"', desc = "$EDITOR", block = true },
+  { run = 'code "$@"', orphan = true },
 ]
 play = [
-	{ run = 'mpv "$@"' },
-	{ run = 'iina --no-stdin "$@"' },
-	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" }
+  { run = 'mpv "$@"' },
+  { run = 'iina --no-stdin "$@"' },
+  { run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" },
 ]
 archive = [
-	{ run = 'unar "$1"', desc = "Extract here" },
-	{ run = '/Applications/BetterZip.app/Contents/MacOS/BetterZip "$1"', orphan = true, desc = "BetterZip" },
+  { run = 'unar "$1"', desc = "Extract here" },
+  { run = '/Applications/BetterZip.app/Contents/MacOS/BetterZip "$1"', orphan = true, desc = "BetterZip" },
 ]
 
 [open]
 rules = [
-	{ name = "*/", use = [ "open", "edit", "reveal" ] },
+  { name = "*/", use = [
+    "open",
+    "edit",
+    "reveal",
+  ] },
 
-	{ mime = "text/*",  use = [ "edit", "reveal" ] },
-	{ mime = "image/*", use = [ "open", "reveal" ] },
-	{ mime = "video/*", use = [ "play", "reveal" ] },
-	{ mime = "audio/*", use = [ "play", "reveal" ] },
-	{ mime = "inode/x-empty", use = [ "edit", "reveal" ] },
-	{ mime = "application/json", use = [ "edit", "reveal" ] },
+  { mime = "text/*", use = [
+    "edit",
+    "reveal",
+  ] },
+  { mime = "image/*", use = [
+    "open",
+    "reveal",
+  ] },
+  { mime = "video/*", use = [
+    "play",
+    "reveal",
+  ] },
+  { mime = "audio/*", use = [
+    "play",
+    "reveal",
+  ] },
+  { mime = "inode/x-empty", use = [
+    "edit",
+    "reveal",
+  ] },
+  { mime = "application/json", use = [
+    "edit",
+    "reveal",
+  ] },
 
-	{ mime = "application/zip",             use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/gzip",            use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/x-tar",           use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/x-bzip",          use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/x-bzip2",         use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/x-7z-compressed", use = [ "extract", "reveal", "archive" ] },
-	{ mime = "application/x-rar",           use = [ "extract", "reveal", "archive" ] },
+  { mime = "application/zip", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/gzip", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/x-tar", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/x-bzip", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/x-bzip2", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/x-7z-compressed", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
+  { mime = "application/x-rar", use = [
+    "extract",
+    "reveal",
+    "archive",
+  ] },
 
-	{ mime = "*", use = [ "open", "reveal" ] },
+  { mime = "*", use = [
+    "open",
+    "reveal",
+  ] },
 
-  { name = "*.mp4", use = ["open", "play", "reveal"] }
+  { name = "*.mp4", use = [
+    "open",
+    "play",
+    "reveal",
+  ] },
 ]
 
 [plugin]
 prepend_previewers = [
-    { name = "*.csv", run = "rich-preview"}, # for csv files
-    { name = "*.md", run = "rich-preview" }, # for markdown (.md) files
-    { name = "*.rst", run = "rich-preview"}, # for restructured text (.rst) files
-    { name = "*.ipynb", run = "rich-preview"}, # for jupyter notebooks (.ipynb)
-    { name = "*.json", run = "rich-preview"}, # for json (.json) files
+  { name = "*.csv", run = "rich-preview" },                                                                             # for csv files
+  { name = "*.rst", run = "rich-preview" },                                                                             # for restructured text (.rst) files
+  { name = "*.ipynb", run = "rich-preview" },                                                                           # for jupyter notebooks (.ipynb)
+  { name = "*.json", run = "rich-preview" },                                                                            # for json (.json) files
+  { name = "*.md", run = "glow" },                                                                                      # for markdown (.md) files
+  { mime = "application/{,g}zip", run = "lsar" },                                                                       # for zip files
+  { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", run = "lsar" },                                            # for zip files
+  { name = "*.tar*", run = 'piper --format=url -- tar tf "$1"' },                                                       # for tar files
+  { name = "*/", run = 'piper -- eza -TL=3 --color=always --icons=always --group-directories-first --no-quotes "$1"' }, # for directory
 ]
 
-[[plugin.prepend_fetchers]]
-id   = "git"
-name = "*"
-run  = "git"
-
-[[plugin.prepend_fetchers]]
-id   = "git"
-name = "*/"
-run  = "git"
-
-[[plugin.prepend_fetchers]]
-id   = "mactag"
-name = "*"
-run  = "mactag"
-
-[[plugin.prepend_fetchers]]
-id   = "mactag"
-name = "*/"
-run  = "mactag"
+prepend_fetchers = [
+  { id = "git", name = "*", run = "git" },
+  { id = "git", name = "*/", run = "git" },
+  { id = "mactag", name = "*", run = "mactag" },
+  { id = "mactag", name = "*/", run = "mactag" },
+]
