[#neovim] update js and toml lsp server configs

--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -1,8 +1,7 @@
 {
   "completion.autoRequire": false,
   "workspace.checkThirdParty": false,
-  "diagnostics.globals": ["dasda", "transparent",
-        "Snacks"],
+  "diagnostics.globals": ["dasda", "transparent", "Snacks"],
   "diagnostics.disable": [
     "param-type-mismatch",
     "inject-field",
