--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,9 +36,9 @@ set -g set-titles-string "#T"
 set -g status-interval 10
 
 # keymaps
-set -g prefix C-a
-unbind C-b
-bind-key C-a send-prefix
+set -g prefix C-b
+# unbind C-b
+# bind-key C-a send-prefix
 
 # edit tmux configuration
 bind e new-window -n "~/.tmux.conf" "EDITOR=\${EDITOR//mvim/vim} && EDITOR=\${EDITOR//gvim/vim} && \${EDITOR:-vim} ~/.tmux.conf && tmux source ~/.tmux.conf && tmux display \"~/.tmux.conf sourced\""
