--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -106,7 +106,7 @@ style = "fg:#f9e2af"
 format = '[$symbol$environment]($style) '
 
 [python]
-symbol = "Py"
+symbol = ""
 style = "fg:#f9e2af"
 format = '[${symbol}${pyenv_prefix}(${version})(\($virtualenv\) )]($style)'
 
