[#neovim] update latex lsp settings

--- a/nvim/snippets/package.json
+++ b/nvim/snippets/package.json
@@ -173,7 +173,7 @@
           "plaintex",
           "tex"
         ],
-        "path": "./snippets/latex.json"
+        "path": "./user/tex.json"
       },
       {
         "language": "plantuml",
