--- a/nvim/.luarc.json
+++ b/nvim/.luarc.json
@@ -1,7 +1,7 @@
 {
   "completion.autoRequire": false,
   "workspace.checkThirdParty": false,
-  "diagnostics.globals": ["dasda", "transparent", "Snacks"],
+  "diagnostics.globals": ["LazyVim", "Snacks"],
   "diagnostics.disable": [
     "param-type-mismatch",
     "inject-field",
