[#neovim] updaete copilot configs

--- a/sesh/sesh.toml
+++ b/sesh/sesh.toml
@@ -3,27 +3,27 @@ startup_command = "pwd"
 
 [[session]]
 name = "Home 🏡"
-path = "~"
+path = "$HOME"
 startup_command = "yazi"
 
 [[session]]
 name = "Code 💻"
-path = "~/Code"
+path = "$HOME/Code"
 startup_command = "yazi"
 
 [[session]]
 name = "Downloads 📥"
-path = "~/Downloads"
+path = "$HOME/Downloads"
 startup_command = "yazi"
 
 [[session]]
 name = "Pictures 📸"
-path = "~/Pictures"
+path = "$HOME/Pictures"
 startup_command = "yazi"
 
 [[session]]
 name = "Videos 🎥"
-path = "~/Movies"
+path = "$HOME/Movies"
 startup_command = "yazi"
 
 [[session]]
@@ -33,100 +33,100 @@ startup_command = "ls -al"
 
 [[session]]
 name = "Notes 📝"
-path = "~/DevNotes"
+path = "$HOME/DevNotes"
 startup_command = "yazi"
 
 [[session]]
 name = "Github"
-path = "~/Github"
-startup_command = "la"
+path = "$HOME/Github"
+startup_command = "ls -al"
 
 [[session]]
 name = "Dotfiles"
-path = "~/Github/dotfiles"
-startup_command = "la"
+path = "$HOME/Github/dotfiles"
+startup_command = "ls -al"
 
 [[session]]
 name = "Blog"
-path = "~/Github/site/blog"
-startup_command = "la"
+path = "$HOME/Github/site/blog"
+startup_command = "ls -al"
 
 [[session]]
 name = "Notebook"
-path = "~/Github/site/notebook"
-startup_command = "la"
+path = "$HOME/Github/site/notebook"
+startup_command = "ls -al"
 
 [[session]]
 name = "Workspace 🔭"
-path = "~/Github/workspace"
-startup_command = "la"
+path = "$HOME/Github/workspace"
+startup_command = "ls -al"
 
 [[session]]
 name = "LaTex workspace 🔭"
-path = "~/Code/tex"
-startup_command = "nvim tex.code-workspace"
+path = "$HOME/Code/tex"
+startup_command = "code tex.code-workspace"
 
 [[session]]
 name = "Python workspace 🔭"
-path = "~/Code/python"
-startup_command = "nvim python.code-workspace"
+path = "$HOME/Code/python"
+startup_command = "code python.code-workspace"
 
 [[session]]
 name = "C workspace 🔭"
-path = "~/Code/c"
-startup_command = "nvim c.code-workspace"
+path = "$HOME/Code/c"
+startup_command = "code  c.code-workspace"
 
 [[session]]
 name = "Cpp workspace 🔭"
-path = "~/Code/cpp"
-startup_command = "nvim cpp.code-workspace"
+path = "$HOME/Code/cpp"
+startup_command = "code cpp.code-workspace"
 
 [[session]]
-name = "nvim config"
-path = "~/Github/dotfiles/nvim"
-startup_command = "nvim init.lua"
+name = "Nvim-config"
+path = "$HOME/Github/dotfiles/nvim"
+startup_command = "ls -al"
 
 [[session]]
-name = "yazi config"
-path = "~/Github/dotfiles/yazi"
-startup_command = "nvim init.lua"
+name = "Yazi-config"
+path = "$HOME/Github/dotfiles/yazi"
+startup_command = "ls -al"
 
 [[session]]
-name = "wezterm config"
-path = "~/Github/dotfiles/wezterm"
-startup_command = "nvim .wezterm.lua"
+name = "Wezterm-config"
+path = "$HOME/Github/dotfiles/wezterm"
+startup_command = "ls -al"
 
 [[session]]
-name = "rime config"
-path = "~/Library/Rime"
-startup_command = "nvim squirrel.custom.yaml"
+name = "Rime-config"
+path = "$HOME/Library/Rime"
+startup_command = "ls -al"
 
 [[session]]
-name = "zsh config"
-path = "~/Github/dotfiles/zsh"
-startup_command = "nvim .zshrc"
+name = "Zsh-config"
+path = "$HOME/Github/dotfiles/zsh"
+startup_command = "ls -al"
 
 [[session]]
-name = "tmux config"
-path = "~/Github/dotfiles/tmux"
-startup_command = "nvim .tmux.conf"
+name = "Tmux-config"
+path = "$HOME/Github/dotfiles/tmux"
+startup_command = "ls -al"
 
 [[session]]
-name = "sesh config"
-path = "~/Github/dotfiles/sesh"
-startup_command = "nvim sesh.toml"
+name = "Sesh-config"
+path = "$HOME/Github/dotfiles/sesh"
+startup_command = "ls -al"
 
 [[session]]
-name = "alacritty config"
-path = "~/Github/dotfiles/alacritty"
-startup_command = "nvim alacritty.toml"
+name = "Alacritty-config"
+path = "$HOME/Github/dotfiles/alacritty"
+startup_command = "ls -al"
 
 [[session]]
-name = "kitty config"
-path = "~/Github/dotfiles/kitty"
-startup_command = "nvim kitty.conf"
+name = "Kitty-config"
+path = "$HOME/Github/dotfiles/kitty"
+startup_command = "ls -al"
 
 [[session]]
-name = "ssh config"
-path = "~/.ssh"
+name = "SSH-config"
+path = "$HOME/.ssh"
 startup_command = "nvim config"
