--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,9 +52,6 @@ bind o run-shell "open #{pane_current_path}"
 # lazygit
 bind -r g display-popup -d '#{pane_current_path}' -w80% -h80% -E lazygit
 
-# fzf
-bind C-f command-prompt -p find-session 'switch-client -t %%'
-
 # clear history
 bind -n C-l send-keys C-l \; run 'sleep 0.1' \; clear-history
 
@@ -140,11 +137,7 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
-# set -g @plugin 'omerxx/tmux-sessionx'
 # colorscheme
 # set -g @plugin 'Nybkox/tmux-kanagawa'
 # set -g @plugin 'catppuccin/tmux'
@@ -182,16 +175,22 @@ set -g @continuum-restore 'off'
 # set -g @catppuccin_directory_text "#{pane_current_path}"
 # set -g @kanagawa-theme 'kanagawa' # lotus dragon kanagawa
 # set -g @kanagawa-ignore-window-colors true
+
+# tokyo-night plugins
 set -g @tokyo-night-tmux_theme "storm"
-set -g @tokyo-night-tmux_show_battery_widget 1
+set -g @tokyo-night-tmux_transparent 0
+set -g @tokyo-night-tmux_window_tidy_icons 1
+set -g @tokyo-night-tmux_path_format relative
+set -g @tokyo-night-tmux_window_id_style dsquare
+set -g @tokyo-night-tmux_pane_id_style hide
+set -g @tokyo-night-tmux_zoom_id_style none
+# widgets
 set -g @tokyo-night-tmux_show_datetime 1
 set -g @tokyo-night-tmux_show_git 1
+set -g @tokyo-night-tmux_show_music 1
 set -g @tokyo-night-tmux_show_wbg 1
-set -g @tokyo-night-tmux_show_music 0
+set -g @tokyo-night-tmux_show_hostname 0
+set -g @tokyo-night-tmux_show_battery_widget 0
 set -g @tokyo-night-tmux_show_path 0
-set -g @tokyo-night-tmux_path_format relative
-set -g @tokyo-night-tmux_window_id_style hide
-set -g @tokyo-night-tmux_pane_id_style hsquare
-set -g @tokyo-night-tmux_zoom_id_style dsquare
 
 run '~/.tmux/plugins/tpm/tpm'
