[#neovim] remove useless plugins

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,6 +22,7 @@ set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
 # set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 set -g pane-active-border-style 'fg=magenta,bg=default'
 set -g pane-border-style 'fg=brightblack,bg=default'
+set -g pane-border-lines heavy
 
 # setw -g monitor-activity on
 set -g visual-activity on
@@ -29,11 +30,13 @@ set -g visual-activity on
 # display
 set -g base-index 1
 setw -g pane-base-index 1
+# set -g pane-border-indicators both
 setw -g automatic-rename on
 set -g renumber-windows on
 set -g set-titles on
 set -g set-titles-string "#T"
 set -g status-interval 10
+set -g status-position bottom
 
 # keymaps
 set -g prefix C-a
