--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -1,4 +1,4 @@
-#? Config file for btop v. 1.4.0
+#? Config file for btop v. 1.4.2
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
@@ -47,14 +47,14 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "mem net proc cpu"
+shown_boxes = "proc mem cpu"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 500
 
 #* Processes sorting, "pid" "program" "arguments" "threads" "user" "memory" "cpu lazy" "cpu direct",
 #* "cpu lazy" sorts top process over time (easier to follow), "cpu direct" updates top process directly.
-proc_sorting = "memory"
+proc_sorting = "cpu lazy"
 
 #* Reverse sorting order, True or False.
 proc_reversed = False
@@ -181,7 +181,7 @@ disk_free_priv = False
 show_io_stat = True
 
 #* Toggles io mode for disks, showing big graphs for disk read/write speeds.
-io_mode = False
+io_mode = True
 
 #* Set to True to show combined read/write io graphs in io mode.
 io_graph_combined = False
@@ -203,6 +203,9 @@ net_sync = True
 
 #* Starts with the Network Interface specified here.
 net_iface = ""
+
+#* "True" shows bitrates in base 10 (Kbps, Mbps). "False" shows bitrates in binary sizes (Kibps, Mibps, etc.). "Auto" uses base_10_sizes.
+base_10_bitrate = "Auto"
 
 #* Show battery stats in top right if battery is present.
 show_battery = True
